tools/crates/vendor/toml_edit/tests/fixtures/invalid/key/partial-quoted.stderr
TOML parse error at line 1, column 8
  |
1 | partial"quoted" = 5
  |        ^
expected `.`, `=`
